--- a/OpenClash_Rules.ini
+++ b/OpenClash_Rules.ini
@@ -33,7 +33,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位结束
 
 ;设置节点分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
