--- a/OpenClash_Rules.ini
+++ b/OpenClash_Rules.ini
@@ -18,7 +18,7 @@ ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🇬谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🧸 Instagram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
-ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list?token=GHSAT0AAAAAAC2VEDOZI2TKZOKRPHB65QBKZZ3QN7Q
+ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list
 ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌎 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
