--- a/OpenClash_Rules.ini
+++ b/OpenClash_Rules.ini
@@ -18,7 +18,7 @@ ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🧸 Instagram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
-ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list
+ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list?token=GHSAT0AAAAAAC2VEDOZCN2IQZBBBJ5AH7Y4ZZ3R4SA
 ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌎 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
@@ -33,7 +33,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位结束
 
 ;设置节点分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
@@ -42,7 +42,7 @@ custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港节点`[]🇺🇸 美国
 custom_proxy_group=🎶 TikTok`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🧸 Instagram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🎥 Emby`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🌎 国外媒体`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
