--- a/Rules.ini
+++ b/Rules.ini
@@ -18,6 +18,7 @@ ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scr
 ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🧸 Instagram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
+ruleset=📖 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Facebook/Facebook.list
 ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list
 ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌎 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
@@ -37,19 +38,20 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🕊️ Twitter(X)`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🕊️ Twitter(X)`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎶 TikTok`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🧸 Instagram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🧸 Instagram`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📹 YouTube`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎥 Emby`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🌎 国外媒体`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=📖 Facebook`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🌎 国外媒体`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🐟 漏网之鱼`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
+custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🎯 全球直连
 custom_proxy_group=中转-ZEZEBRA`relay`[]🚀 节点选择`(ZEZEBRA)
 custom_proxy_group=中转-FANGLING`relay`[]🚀 节点选择`(FANGLING)
 custom_proxy_group=中转-EliAuk`relay`[]🚀 节点选择`(EliAuk)
