--- a/Rules.ini
+++ b/Rules.ini
@@ -56,6 +56,7 @@ custom_proxy_group=中转-ZEZEBRA`relay`[]🚀 节点选择`(ZEZEBRA)
 custom_proxy_group=中转-FANGLING`relay`[]🚀 节点选择`(FANGLING)
 custom_proxy_group=中转-EliAuk`relay`[]🚀 节点选择`(EliAuk)
 custom_proxy_group=中转-Elephant`relay`[]🚀 节点选择`(Elephant)
+custom_proxy_group=中转-XIANG`relay`[]🚀 节点选择`(XIANG)
 custom_proxy_group=中转-US-2`relay`[]🚀 节点选择`(US-2)
 custom_proxy_group=中转-US-3`relay`[]🚀 节点选择`(US-3)
 custom_proxy_group=中转-US-4`relay`[]🚀 节点选择`(US-4)
