--- a/Rules.ini
+++ b/Rules.ini
@@ -62,7 +62,7 @@ custom_proxy_group=🇬🇧 英国节点`url-test`(英国|Britain)`http://cp.clo
 custom_proxy_group=🇩🇪 德国节点`url-test`(德国|Germany|柏林|法兰克福)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇹🇷 土耳其节点`url-test`(土耳其|Turkey|Türkiye)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇦🇷 阿根廷节点`url-test`(阿根廷|Argentina)`http://cp.cloudflare.com/generate_204`300,,50
-custom_proxy_group=🇱🇺 卢森堡节点`url-test`(卢森堡|Luxembourg)`http://cp.cloudflare.com/generate_204`300,,50, filter: "^((?!(直连|ZEZEBRA|FANGLING|EliAuk|US-2|US-3|US-4|XIANG)).)*$"}
+custom_proxy_group=🇱🇺 卢森堡节点`url-test`(卢森堡|Luxembourg)`http://cp.cloudflare.com/generate_204`300,,50
 
 ;设置分组标志位
 
