--- a/Rules.ini
+++ b/Rules.ini
@@ -20,6 +20,7 @@ ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=🧸 Instagram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
 ruleset=📖 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Facebook/Facebook.list
 ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list
+ruleset=🎥 Emby,https://raw.githubusercontent.com/ddgksf2013/Filter/refs/heads/master/Emby.list
 ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌎 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
