--- a/Rules.ini
+++ b/Rules.ini
@@ -3,25 +3,22 @@
 
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Lan/Lan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Direct/Direct.list
-ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GoogleFCM/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/SteamCN/SteamCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/PrivateTracker/PrivateTracker.list
 ruleset=📲 Telegram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=🕊️ Twitter(X),https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ruleset=💬 ChatGPT,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/OpenAI/OpenAI.list
 ruleset=🚀 GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
-ruleset=🍎 苹果服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
-ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
+ruleset=🍎 Apple,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Apple/Apple.list
+ruleset=Ⓜ️ Microsoft,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Microsoft/Microsoft.list
 ruleset=📹 YouTube,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/YouTube/YouTube.list
-ruleset=🇬 谷歌服务,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
+ruleset=🇬 Google,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ruleset=🎶 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/TikTok/TikTok.list
 ruleset=🧸 Instagram,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Instagram/Instagram.list
 ruleset=📖 Facebook,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Facebook/Facebook.list
 ruleset=🎥 Emby,https://raw.githubusercontent.com/01xiang/OpenClash_Rules/refs/heads/main/Emby.list
 ruleset=🎥 Emby,https://raw.githubusercontent.com/ddgksf2013/Filter/refs/heads/master/Emby.list
-ruleset=🎻 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
 ruleset=🌎 国外媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GlobalMedia/GlobalMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
@@ -39,7 +36,6 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🇭🇰 香
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🚀 GitHub`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📲 Telegram`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🕊️ Twitter(X)`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=💬 ChatGPT`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🎶 TikTok`select`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🧸 Instagram`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
@@ -48,11 +44,11 @@ custom_proxy_group=🎥 Emby`select`[]🎯 全球直连`[]🇭🇰 香港节点`
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=📖 Facebook`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
 custom_proxy_group=🌎 国外媒体`select`[]🇺🇸 美国节点`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🇬 谷歌服务`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
-custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
-custom_proxy_group=Ⓜ️ 微软服务`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
+custom_proxy_group=🇬 Google`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择`[]🎯 全球直连
+custom_proxy_group=🍎 Apple`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
+custom_proxy_group=Ⓜ️ Microsoft`select`[]🎯 全球直连`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]♻️ 自动选择
 custom_proxy_group=🐟 漏网之鱼`select`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇹🇼 台湾节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[]🇱🇺 卢森堡节点`[]🇦🇷 阿根廷节点`[]🇹🇷 土耳其节点`[]🎯 全球直连
+custom_proxy_group=YUWU`select`(YUWU|ZEZEBRA|FANGLING|EliAuk|US|XIANG)`dialer-proxy[]♻️ 自动选择
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong|深港)`http://cp.cloudflare.com/generate_204`300,,50
 custom_proxy_group=🇺🇸 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|UnitedStates)`http://cp.cloudflare.com/generate_204`300,,50
